--- a/css/style.css
+++ b/css/style.css
@@ -207,3 +207,27 @@ main {
 button {
   cursor: pointer;
 }
+#result {
+    margin: auto;
+    width: 30vw;
+    height: 40vh;
+    text-align: center;
+    background: linear-gradient(to bottom, #F0B100, #FFDF20 );
+    border: solid #ffffff 4px;
+    border-radius: 10px;
+    color: rgb(0, 0, 0);
+}
+.result-container {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.result-container ul{
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  list-style: none;
+}
