--- a/css/style.css
+++ b/css/style.css
@@ -170,6 +170,11 @@ main {
   border-color: transparent;
   border-radius: 20px;
 }
+
+#points {
+  margin-top: 398px;
+  margin-left: 1rem;
+}
 /* bottom section */
 .bottom-section {
   display: flex;
@@ -208,24 +213,24 @@ button {
   cursor: pointer;
 }
 #result {
-    margin: auto;
-    width: 30vw;
-    height: 40vh;
-    text-align: center;
-    background: linear-gradient(to bottom, #F0B100, #FFDF20 );
-    border: solid #ffffff 4px;
-    border-radius: 10px;
-    color: rgb(0, 0, 0);
+  margin: auto;
+  width: 30vw;
+  height: 40vh;
+  text-align: center;
+  background: linear-gradient(to bottom, #f0b100, #ffdf20);
+  border: solid #ffffff 4px;
+  border-radius: 10px;
+  color: rgb(0, 0, 0);
 }
 .result-container {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
-.result-container ul{
+.result-container ul {
   display: flex;
   flex-direction: column;
   gap: 20px;
