--- a/css/style.css
+++ b/css/style.css
@@ -70,6 +70,7 @@ main {
   flex-direction: row;
   margin: 1rem 0 0 0;
   justify-content: space-between;
+  height: fit-content;
 }
 
 #questionBar {
@@ -235,4 +236,38 @@ button {
   flex-direction: column;
   gap: 20px;
   list-style: none;
+}
+
+dialog::backdrop {
+  background-color: rgba(0, 0, 0, 0.6);
+}
+
+#termsConditions,
+#startDialog {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 2rem;
+  border-radius: 1rem;
+}
+
+#startDialog {
+  display: none;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+#clock {
+  width: 2rem;
+  height: 2rem;
+}
+
+#timer {
+  font-size: 1.4rem;
 }
