Modal styling & restart function on leaderboard/result

--- a/css/mobile.css
+++ b/css/mobile.css
@@ -18,4 +18,8 @@
   .points-box span:nth-child(2) {
     display: none;
   }
+  #termsConditions, #startDialog, #leaderboard, #result {
+    padding: 25px;
+    text-align: center;
+  }
 }
