--- a/css/style.css
+++ b/css/style.css
@@ -213,28 +213,17 @@ main {
 button {
   cursor: pointer;
 }
-#result {
-  margin: auto;
-  width: 30vw;
-  height: 40vh;
-  text-align: center;
-  background: linear-gradient(to bottom, #f0b100, #ffdf20);
-  border: solid #ffffff 4px;
-  border-radius: 10px;
-  color: rgb(0, 0, 0);
-}
+
 .result-container {
-  width: 100%;
-  height: 100%;
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  text-align: center;
+  gap: 5px;
 }
 .result-container ul {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 10px;
   list-style: none;
 }
 
@@ -242,20 +231,57 @@ dialog::backdrop {
   background-color: rgba(0, 0, 0, 0.6);
 }
 
+#trivia_difficulty, 
+#trivia_category, #playerName, #selectdiff {
+  padding: 5px;
+  border-radius: 5px;
+  border: solid white 2px;
+}
+
 #termsConditions,
-#startDialog {
+#startDialog, #leaderboard, #result  {
+  background: linear-gradient(to bottom, #f0b100, #ffdf20);
+  border: solid white 2px;
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  padding: 2rem;
+  padding: 75px;
   border-radius: 1rem;
 }
+
+#startButton, .result-container button, 
+#leaderboard button, #termsConditions button  {
+  width: 100%;
+  padding: 5px;
+  border-radius: 10px;
+  border: white 2px solid;
+  color: black; 
+}
+
+#termsConditions span { 
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  margin-top: 20px;
+} 
 
 #startDialog {
   display: none;
   flex-direction: column;
   gap: 0.5rem;
+}
+
+#leaderboard span {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  margin: 25px;
+}
+
+#scoreboard {
+  width: fit-content;
+  margin: 0 auto;
 }
 
 a {
